--- a/main.html
+++ b/main.html
@@ -1,16 +1,60 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+    <!-- Navigation bar with ARIA role -->
+    <nav role="navigation" aria-label="Main Navigation">
+        <ul role="list">
+            <li role="listitem"><a href="#about">About Me</a></li>
+            <li role="listitem"><a href="#skills">Skills</a></li>
+            <li role="listitem"><a href="#projects">Projects</a></li>
+            <li role="listitem"><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+
+    <!-- Heading with ARIA role -->
+    <header>
+        <h1 role="heading" aria-level="1">Welcome to My Portfolio</h1>
+    </header>
+
+    <!-- Image with ARIA role and alt attribute -->
+    <section id="about">
+        <img role="img" src="profile.jpg" alt="Portrait of [Your Name]">
+        <p>I am a software developer with a passion for creating accessible and inclusive web applications. Welcome to my portfolio where I showcase my projects and skills.</p>
+    </section>
+
+    <!-- Skills Section -->
+    <section id="skills">
+        <h2>My Skills</h2>
+        <p>I specialize in the following:</p>
+        <ul>
+            <li>Web Development</li>
+            <li>Accessibility and Inclusive Design</li>
+            <li>Data Analysis</li>
+        </ul>
+    </section>
+
+    <!-- Projects Section -->
+    <section id="projects">
+        <h2>My Projects</h2>
+        <ul>
+            <li>Accessible Web Application</li>
+            <li>E-commerce Website</li>
+            <li>Interactive Data Visualizations</li>
+        </ul>
+    </section>
+
+    <!-- LinkedIn Profile -->
+    <section id="contact">
+        <h2>Contact Me</h2>
+        <p>You can reach me at <a href="mailto:yourname@example.com">yourname@example.com</a> or connect with me on <a href="https://www.linkedin.com/in/yourprofile" target="_blank">LinkedIn</a>.</p>
+    </section>
 
 </body>
-
 </html>
